<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">COMP2000 Assessment</string>
    <string name="restaurantName">The Restaurant 2000</string>
    <!-- Sign Up & Login prompts-->
    <string name="signUpTitle">Customer Sign Up</string>
    <string name="loginTitle">Login</string>
    <string name="first_name_prompt">First Name:</string>
    <string name="last_name_prompt">Last Name:</string>
    <string name="email_prompt">Email:</string>
    <string name="phone_prompt">PhoneNo:</string>
    <string name="username_prompt">Username:</string>
    <string name="password_prompt">Password:</string>
    <string name="viewTCLbl">View T&amp;C</string>
    <string name="signUpBtn">Sign me Up</string>
    <string name="loginBtn">Login</string>
    <!-- Sign Up & Login inputs-->
    <string name="first_name_input" tools:ignore="TypographyEllipsis">Enter firstname...</string>
    <string name="last_name_input" tools:ignore="TypographyEllipsis">Enter lastname...</string>
    <string name="enter_password" tools:ignore="TypographyEllipsis">Enter password...</string>
    <string name="enter_username" tools:ignore="TypographyEllipsis">Enter username...</string>
    <string name="enter_email" tools:ignore="TypographyEllipsis">Enter email...</string>
    <string name="enter_phoneNo" tools:ignore="TypographyEllipsis">Enter number...</string>
    <!--General submit -->
    <string name="submitLbl">Submit</string>"
    <!-- Menu headers -->
    <string name="menuLbl"><b>Menu</b></string>
    <string name="imageLbl"><b>Image:</b></string>
    <string name="descriptionLbl"><b>Description:</b></string>
    <string name="priceLbl"><b>Price:</b></string>
    <!-- Menu Categories -->
    <string name="starterLbl">Starters</string>
    <string name="mainsLbl">Mains</string>
    <string name="dessertsLbl">Desserts</string>
    <string name="drinksLbl">Drinks</string>
    <string name="sidesLbl">Sides</string>
    <!-- Add menu item -->
    <string name="addItemTitle">Add New Item</string>
    <string name="itemCodeLbl"><b>Item Code:</b></string>
    <string name="itemNameLbl"><b>Item Name:</b></string>
    <string name="categoryLbl"><b>Category:</b></string>
    <string name="uploadLbl"><b>Upload item cover:</b></string>
    <string name="itemDescLbl"><b>Item Description:</b></string>
    <string name="descriptionPrompt">Enter details about the \n food/drink for customers.. </string>
    <string name="itemAddConfirmationTxt">New item added to \n restaurant menu!</string>
    <!-- Guest dashboard options -->
    <string name="dashboard">Dashboard</string>
    <string name="menuOption">VIEW MENU</string>
    <string name="myBookingsOption">MY BOOKINGS</string>
    <string name="tableReqOption">REQUEST TABLE</string>
    <string name="preferencesOption">SETTINGS</string>
    <string name="changeViewMenuLbl">CHANGE OR VIEW MENU</string>
    <string name="viewTblResLbl">VIEW TABLE \n RESERVATIONS</string>
    <string name="addStaffLbl">ADD NEW \n STAFF MEMBERS</string>
    <!--Staff Menu -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!-- Alerts texts -->
    <string name="alert">ALERT!</string>
    <string name="accountCreated">Your account was created successfully!</string>
    <string name="requestSent">Thank you for your request! \n Restaurant will confirm it shortly!</string>
    <string name="amendAlert">You have amended your booking!</string>
    <string name="cancelAlert">You are cancelling a booking! \n Do you wish to continue?</string>
    <string name="backHomeTxt">Take me home</string>
    <string name="showBookingTxt">Show booking</string>
    <!--Making request labels-->
    <string name="makeRequestTitle">Make a Reservation \n Enquiry</string>
    <string name="nameLbl"><b>Name:</b></string>
    <string name="guestNoLbl"><b>No. of Guests:</b></string>
    <string name="dateLbl"><b>Date:</b></string>
    <string name="timeLbl"><b>Time:</b></string>
    <string name="specialNotesLbL"><b>Special Notes:</b></string>
    <string-array name="guest_no_dropdown_items">
        <item>Select No. of Guests…</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="specialNotesHint" tools:ignore="StringEscaping,TypographyEllipsis">Write anything you would like \n the restaurant to know...</string>
    <string name="sendRequestBtn">Send Request</string>
    <!--Viewing booking labels-->
    <string-array name="booking_types">
        <item>Confirmed Bookings</item>
        <item>Unconfirmed Requests</item>
    </string-array>
    <string name="tableNoLbl">Table No:</string>
    <string name="myBookingsTitle">My Bookings</string>
    <!-- Preferences labels -->
    <string name="preferencesTitle">App Preferences</string>
    <string name="appearance">Appearance</string>
    <string name="notifications">Notifications</string>
    <string name="bkgrndColorLbl">Background color:</string>
    <string name="textColorLbl">Text color:</string>
    <string name="cancelAlertOpt">Alert when a booking is cancelled:</string>
    <string name="confirmAlertOpt">Alert when a booking is confirmed:</string>
    <string name="modifyAlertOpt">Alert when a booking is modified:</string>
    <string name="signOutLbl">Sign out</string>
    <string name="logoutText">You are signing out of \n The Restaurant 2000! \n Do you wish to continue?</string>
    <string name="saveChangesLbl">Save changes</string>
    <string name="cancelLbl">Cancel</string>
    <string name="goBackTxt">No, go back</string>
    <string name="confirmSignOut">Yes, sign out</string>
    <string name="pickingDate">You are picking a date!</string>
    <string name="timePicking">You are picking a time for this date</string>

    <string-array name="table_numbers">
        <item tools:ignore="TypographyEllipsis">Choose a table...</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string name="close_dialog">close dialog</string>
    <string name="edit_description">Edit description:</string>
    <string name="change_description">Change description...</string>
    <string name="change_price">Change price:</string>
    <string name="add_price_hint">Add price...</string>
    <string name="change_cover_hint">Change cover:</string>
    <string name="browse_image_hint">Browse</string>
    <string-array name="categoryOptions">
        <item tools:ignore="TypographyEllipsis">Select a category...</item>
        <item>1 - Starters</item>
        <item>2 - Mains</item>
        <item>3 - Desserts</item>
        <item>4 - Drinks</item>
        <item>5 - Sides</item>
    </string-array>
    <string name="errorAddingItemTxt">Oops! \n There was an issue adding this item to the database! \n Please go back and try again!</string>
    <string name="retryLbl">Retry</string>
    <string name="deleteItemPrompt">You are about to delete this item! \n Do you wish to continue?</string>
    <string name="upload_imageLbl">Upload Image...</string>
    <string name="add_new_staffLbl">Add New Staff</string>
    <string name="work_email_Prompt">Work Email:</string>
    <string name="enter_work_email_Hint">Enter your WORK email...</string>
    <string name="staff_added_Message">Staff member successfully added to \n admin database!</string>
    <string name="add_staff_FailTxt">Oops! \n This member could not be added \n to the admin database! \n Please try again!</string>
    <string name="edit_menu_item_title">Edit Menu Item:</string>
    <string name="edit_name">Edit Name:</string>
    <string name="change_name_hint">Change name...</string>
    <string name="edit_category_txt">Edit Category...</string>
    <string name="yes_delete_this_item">Yes, delete this item</string>
    <string name="delete_item_from_menu_title">Delete item from menu:</string>
    <string name="no_cancel_text">No, cancel</string>
    <string name="delete_item_menu_title">Delete item \n from menu</string>
    <string name="delete_itemMenu_title">Delete item \n from the menu:</string>
    <string name="deleteBookingAltText">Delete this booking</string>
    <string name="change_statusTxt">Change Status</string>

</resources>